# meow-tea-taro

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/_static/css/: custom.css
docs/source/getting_started/: quick_install.rst  quick_start_textworld.rst
docs/source/tutorials/: basic_training.rst
examples/alfworld/: run_ppo_qwen-7b.sh  run_sft_qwen-7b.sh
examples/swegym/: run_grpo_qwen-8b.sh
examples/textworld/: run_ppo_qwen-0.5b.sh  run_ppo_qwen-1.5b.sh  run_ppo_qwen-7b.sh
meow_tea_experiments/data_generation/: generate_multiturn_data.py  multiturn_template.py
meow_tea_experiments/data_generation/tasks/: download_alfworld_tasks.sh  generate_textworld_basic_tasks.sh  generate_textworld_dense_tasks.sh
meow_tea_experiments/data_generation/utils/: env_wrapper.py  process_alfworld_tasks.py
meow_tea_train/: pyproject.toml
meow_tea_train/agentic_menu/async_software/: agent_loop.py  env_wrapper.py
meow_tea_train/agentic_menu/base/: agent.py  agent_loop.py  env.py
meow_tea_train/agentic_menu/build_your_own/: agent.py  agent_loop.py  env.py
meow_tea_train/agentic_menu/sync_textworld/: __init__.py  agent.py  env.py
meow_tea_train/agentic_utils/data_mapping/: rl_data_mapping.py
meow_tea_train/agentic_utils/data_process/: rl_data_processor.py  sft_data_processor.py
meow_tea_train/agentic_utils/reward_manager/: agentic_verified.py
meow_tea_train/agentic_utils/rollout/: vllm_sync_agentic_rollout.py
meow_tea_train/scripts/: process_rl_data.sh  process_sft_data.sh  rl_data_processor.py  run_multiturn_rl.sh  run_multiturn_sft.sh
meow_tea_train/verl/trainer/: fsdp_sft_trainer.py
meow_tea_train/verl/trainer/config/: ppo_trainer.yaml
meow_tea_train/verl/trainer/config/agentic/: agentic.yaml
meow_tea_train/verl/trainer/ppo/: hf_utils.py  ray_trainer.py  reward.py  utils.py
meow_tea_train/verl/utils/dataset/: chat_based_sft_dataset.py
meow_tea_train/verl/workers/config/: __init__.py  agentic.py  rollout.py
meow_tea_train/verl/workers/rollout/: base.py
meow_tea_train/verl/workers/rollout/vllm_rollout/: vllm_rollout_spmd.py
recipes/: textworld_cooking_ppo.sh  textworld_cooking_rloo.sh  textworld_w2-o3-q4_ppo.sh  textworld_w4-o6-q8_ppo.sh
scripts/: generate_tasks.sh  prepare_ppo_data.sh  prepare_rl_data.sh
