[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meow_tea_train"
version = "0.1.0"
description = "Meow tea taro: A Multi-turn Agentic Reinforcement Learning Framework"
authors = [
    {name = "Ruiyi Wang", email = "ruiyiwang@ucsd.edu"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "textworld",
    "alfworld"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
]

[project.urls]
Homepage = "https://github.com/ruiyiw/meow-tea-taro"
Repository = "https://github.com/ruiyiw/meow-tea-taro"
Issues = "https://github.com/ruiyiw/meow-tea-taro/issues"

[tool.setuptools.packages.find]
# This tells setuptools to find all packages automatically
# Equivalent to find_packages() in setup.py

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 120